--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -129,19 +129,26 @@ body{
 
 	header {
 		display: block;
-		width: 250px;
-		height: 100%;
+		width: 100%;
+		height: 40px;
 		position: fixed;
-	  left: -250px;
 	  box-sizing: border-box;
 	  transition: background, left .4s;
-	  z-index: 9998;
+		z-index: 2;
 			ul {
-				padding: 0px 60px;
-				display: block;
-				justify-content: space-around;
-				width: 100%;
-				align-items: center;
+				width: 36%;
+    		right: 0;
+		    position: absolute;
+		    top: 0px;
+				li{
+					display: none;
+				}
+				:nth-last-child(1){
+					display: block;
+				}
+				:nth-last-child(2){
+					display: block;
+				}
 			}
 			.swipe-area{
 
@@ -151,7 +158,7 @@ body{
 						width: 50px;
 						height: 50px;
 						// background-color: black;
-						left: 100%;
+
 						visibility: visible;
 						z-index: 1;
 
@@ -176,35 +183,60 @@ body{
 								border-radius: 0 0 28px 28px;
 								}
 				}
+
+
 			}
 
 	}
 
-	&.open{
-			left: 0;
-			transition: background, left .4s;
-		}
+						a{
+							padding-left: 60px;
+
+							img{
+							width: 75px;
+							margin: 5px;
+						}
+					}
 
 	}
+}
+
+@media (max-width: 514px){
+
 }
 
 /******************/
 //MOBILE HEADER
 /******************/
+body.open{
+	overflow: hidden;
+}
+
+.bar-wrapper.open{
+	left: 250px;
+	transition:background, left .4s;
+}
+
 
 .mobile-head-wrapper{
-	width: 100%;
-	height: 45px;
+	width: 250px;
+	height: 100%;
 	background-color: white;
   position: fixed;
   top: 0;
   transition: all .4s;
 	text-align: right;
-	z-index: 1;
+	z-index: 3;
   display: flex;
   justify-content: space-between;
-  padding-left: 155px;
+  padding-left: 25px;
+	left: -250px;
 }
+
+.mobile-head-wrapper.open{
+		left: 0px;
+		transition: background, left .4s;
+	}
 
 .mobile-head-wrapper a{
 	height: 50px;
@@ -212,7 +244,7 @@ body{
 }
 
 .mobile-head-wrapper a img{
-	height: 50px;
+
 }
 
 .mobile-head-wrapper ul a{
@@ -220,7 +252,18 @@ body{
  margin-left: 0px;
 }
 .mobile-head-wrapper ul{
-	    padding-right: 148px;
+	/* padding-right: 148px; */
+	padding: 0px 60px;
+	display: block;
+	-ms-flex-pack: distribute;
+	justify-content: space-around;
+	/* width: 100%; */
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	position: absolute;
+	left: 0;
+	top: 100px;
 }
 
 .mobile-head-wrapper li{
@@ -269,6 +312,24 @@ body{
 /******************/
 //MOBILE HEADER END
 /******************/
+
+
+/*-------------------------------*/
+/*            Overlay            */
+/*-------------------------------*/
+
+.overlay{
+		display: none;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(250,250,250,.8);
+		z-index: 1;
+}
 
 }
 
