--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -140,6 +140,7 @@ body{
     		right: 0;
 		    position: absolute;
 		    top: 0px;
+				margin-top: 8px;
 				li{
 					display: none;
 				}
@@ -148,6 +149,11 @@ body{
 				}
 				:nth-last-child(2){
 					display: block;
+					width: 100px;
+					a{
+						padding-left: 29px;
+						width: 100px;
+					}
 				}
 			}
 			.swipe-area{
@@ -218,15 +224,17 @@ body.open{
 	width: 250px;
 	height: 100%;
 	background-color: white;
-  position: fixed;
-  top: 0;
-  transition: all .4s;
-	text-align: right;
+	position: fixed;
+	top: 0;
+	transition: all .4s;
 	z-index: 3;
-  display: flex;
-  justify-content: space-between;
-  padding-left: 25px;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-around;
+	flex-direction: column;
 	left: -250px;
+	display: block;
+	text-align: left;
 }
 
 .mobile-head-wrapper.open{
@@ -237,10 +245,14 @@ body.open{
 .mobile-head-wrapper a{
 	height: 50px;
 	width: 116px;
+	 :visited{
+		 color: black;
+	 }
 }
 
 .mobile-head-wrapper a img{
-
+	margin-top: 20px;
+	margin-left: 32px;
 }
 
 .mobile-head-wrapper ul a{
@@ -248,34 +260,53 @@ body.open{
  margin-left: 0px;
 }
 .mobile-head-wrapper ul{
-	/* padding-right: 148px; */
-	padding: 0px 60px;
+  padding-left: 0px;
 	display: block;
 	-ms-flex-pack: distribute;
 	justify-content: space-around;
-	/* width: 100%; */
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	position: absolute;
 	left: 0;
 	top: 100px;
+	font-size: 20px;
+	text-align: left;
+	line-height: 33px;
 }
 
-.mobile-head-wrapper li{
+.mobile-head-wrapper li {
 	list-style-type: none;
+		ul li{
+			padding-left: 10px;
+		}
+}
+
+
+.hidden ul:hover{
+	background-color: black;
+}
+
+
+
+.mobile-head-wrapper li:hover{
+	background-color: $mainBlueColor;
+		a{
+			color: white;
+		}
+		ul li{
+			background-color: rgba(173, 177, 189, 0.7);
+		}
+		ul li:hover{
+			background-color: $mainBlueColor ;
+		}
 }
 
 .mobile-head-wrapper ul li a{
 		text-decoration: none;
+		color: $mainBlueColor;
+		padding-left: 57px;
 }
-.mobile-head-wrapper ul li:first-child{
-	float: right;
-	padding-left: 20px;
-}
-.mobile-head-wrapper ul li:last-child{
-	float: left;
-}
+
 
  .mobile-head-wrapper .blue_item a {
 	color: #0080c6;
@@ -323,7 +354,7 @@ body.open{
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-color: rgba(250,250,250,.8);
+		background-color: rgba(173, 177, 189, 0.7);
 		z-index: 1;
 }
 
