--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -5,6 +5,7 @@ footer {
 	text-align: center;
 	color: #b2b8ba;
 	line-height: 20px;
+	 flex: 1 0 auto;
 	font: 400 13px "ClearSans-Regular", sans-serif;
 	z-index: 9000;
 	position: absolute;
