--- a/app/scss/_map.scss
+++ b/app/scss/_map.scss
@@ -60,3 +60,64 @@
     }
   }
 }
+
+.contacts {
+  width: 100%;
+  height: 585px;
+  position: relative;
+  .info {
+    position: absolute;
+    width: 375px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 105px;
+    background-color: rgba(#0c87cd, .9);
+    padding: 30px;
+    color: #fff;
+    white-space: nowrap;
+  }
+  .title {
+    color: #fff;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+  }
+  .text {
+    font-family: "ClearSans-Regular";
+    font-size: 16px;
+    color: rgba(#fff, .6);
+    margin: 30px 0 10px 0;
+  }
+  .number {
+    font-family: "ClearSans-Bold";
+    font-size: 22px;
+    margin-bottom: 5px;
+  }
+  .mail {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(#fff, .6);
+    &:hover {
+      border: none;
+    }
+  }
+  .info-left {
+    display: inline-block;
+    padding-right: 30px;
+  }
+  .info-right {
+    text-align: center;
+    display: inline-block;
+  }
+  .icon {
+    vertical-align: bottom;
+    display: inline-block;
+    margin-bottom: 10px;
+    img {
+      width: 100%;
+    }
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
