--- a/app/scss/_map.scss
+++ b/app/scss/_map.scss
@@ -2,6 +2,7 @@
   position: relative;
   .main-bottom-map{
     height: 500px;
+    min-height: 100vh;
   }
   .main-bottom-map-info-block{
     //block appearence
