--- a/app/scss/_homeDomira.scss
+++ b/app/scss/_homeDomira.scss
@@ -104,3 +104,7 @@ main .wrapper .container .layout .page-title h3 {
 	top: 50%;
 	transform: translateY(-50%);
 }
+
+.top5-planing {
+	min-height: 100vh;
+}
