--- a/app/css/style.css
+++ b/app/css/style.css
@@ -29,6 +29,10 @@ body {
       -ms-flex-direction: column;
           flex-direction: column; }
 
+@media (max-width: 996px) {
+  body {
+    padding-top: 87px; } }
+
 main {
   width: 100%; }
 
@@ -374,6 +378,7 @@ header .drop:hover .hidden {
     opacity: 1; } }
 
 .burger-mobile {
+  display: none;
   background-color: #0080c6;
   width: 50px;
   height: 50px;
@@ -381,7 +386,7 @@ header .drop:hover .hidden {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  right: 10px;
+  left: 10px;
   text-align: center;
   font-size: 0; }
   .burger-mobile .lines {
@@ -390,9 +395,7 @@ header .drop:hover .hidden {
     width: 70%;
     height: 5px;
     background-color: #fff;
-    -webkit-transform: none;
-            transform: none;
-    transition: all .5s; }
+    transition: all .3s; }
     .burger-mobile .lines:after, .burger-mobile .lines:before {
       content: '';
       display: block;
@@ -400,8 +403,6 @@ header .drop:hover .hidden {
       height: 100%;
       background-color: #fff;
       position: relative;
-      -webkit-transform: none;
-              transform: none;
       transition: all .5s; }
     .burger-mobile .lines:before {
       bottom: 10px; }
@@ -413,79 +414,92 @@ header .drop:hover .hidden {
     height: 100%;
     width: 0;
     vertical-align: middle; }
-  .burger-mobile.active .lines {
-    -webkit-animation: rotateLeft .3s .3s forwards;
-            animation: rotateLeft .3s .3s forwards; }
-    .burger-mobile.active .lines:before {
-      -webkit-animation: lineBeforePosition .3s forwards, rotateRight .3s .3s forwards;
-              animation: lineBeforePosition .3s forwards, rotateRight .3s .3s forwards; }
-    .burger-mobile.active .lines:after {
-      -webkit-animation: lineAfterPosition .3s forwards, rotateRight .3s .3s forwards;
-              animation: lineAfterPosition .3s forwards, rotateRight .3s .3s forwards; }
-
-@-webkit-keyframes lineBeforePosition {
-  0% {
-    bottom: 10px; }
-  100% {
-    bottom: 0px; } }
-
-@keyframes lineBeforePosition {
-  0% {
-    bottom: 10px; }
-  100% {
-    bottom: 0px; } }
-
-@-webkit-keyframes lineAfterPosition {
-  0% {
-    top: 5px; }
-  100% {
-    top: -5px; } }
-
-@keyframes lineAfterPosition {
-  0% {
-    top: 5px; }
-  100% {
-    top: -5px; } }
-
-@-webkit-keyframes rotateLeft {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg); } }
-
-@keyframes rotateLeft {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg); } }
-
-@-webkit-keyframes rotateRight {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(-90deg);
-            transform: rotate(-90deg); } }
-
-@keyframes rotateRight {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(-90deg);
-            transform: rotate(-90deg); } }
+  .burger-mobile.open .lines {
+    background-color: transparent; }
+    .burger-mobile.open .lines:before {
+      bottom: 0px;
+      -webkit-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
+    .burger-mobile.open .lines:after {
+      top: -5px;
+      -webkit-transform: rotate(45deg);
+              transform: rotate(45deg); }
 
 @media (max-width: 1300px) {
   header li a {
     font-size: 11px; } }
 
 @media (max-width: 996px) {
-  header ul {
-    display: none; } }
+  .burger-mobile {
+    display: block; }
+  header {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+    header img {
+      margin: 15px; }
+  header ul:not(.hidden) {
+    display: block;
+    max-width: 50px;
+    max-height: 50px;
+    background-color: #0080c6;
+    position: absolute;
+    top: calc(50% - 25px);
+    left: 10px;
+    margin: 0;
+    transition: top .2s .3s linear, max-height .3s linear, max-width .3s linear, border-radius .3s linear;
+    padding: 10px;
+    overflow: hidden; }
+    header ul:not(.hidden) a {
+      color: #fff;
+      transition: opacity .3s;
+      font-size: 15px;
+      line-height: 15px;
+      opacity: 0; }
+    header ul:not(.hidden) li {
+      padding-top: 5px; }
+    header ul:not(.hidden) .drop:after {
+      content: none; }
+    header ul:not(.hidden) .drop .hidden {
+      padding: 5px 0;
+      padding-left: 20px;
+      -webkit-animation: none;
+              animation: none;
+      position: static;
+      display: block;
+      background-color: transparent; }
+      header ul:not(.hidden) .drop .hidden:before, header ul:not(.hidden) .drop .hidden:after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 1px;
+        position: static;
+        background-color: #0070ad;
+        position: relative;
+        right: 20px; }
+      header ul:not(.hidden) .drop .hidden li {
+        margin: 0;
+        padding-top: 5px;
+        padding-left: 0; }
+        header ul:not(.hidden) .drop .hidden li:last-of-type {
+          padding-bottom: 5px; }
+        header ul:not(.hidden) .drop .hidden li a {
+          transition: opacity .3s;
+          line-height: 15px;
+          opacity: 0; }
+    header ul:not(.hidden).active {
+      transition: top .2s linear, max-height .3s linear .2s, max-width .3s linear .2s, border-radius .3s linear .2s;
+      top: calc(50% + 25px);
+      max-height: 90vh;
+      max-width: 150px;
+      border-radius: 20px;
+      border-top-left-radius: 0px; }
+      header ul:not(.hidden).active a {
+        transition: opacity .3s .5s;
+        opacity: 1; }
+      header ul:not(.hidden).active .drop .hidden li a {
+        transition: opacity .3s .5s;
+        opacity: 1; } }
 
 .container {
   margin-right: auto;
@@ -1282,6 +1296,63 @@ main .wrapper .container .layout .page-title h3 {
 .top5-planing {
   min-height: 100vh; }
 
+.image-block {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .image-block .background-pic {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    width: 40%; }
+  .image-block__text {
+    width: 60%;
+    position: relative;
+    background-color: #3b3f4d;
+    color: #fff;
+    background-image: url("../img/background-image-block.png");
+    background-repeat: no-repeat;
+    background-position: -50% -50%; }
+    .image-block__text .content-wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
+      width: 60%;
+      font-size: 15px; }
+      .image-block__text .content-wrapper h2 {
+        text-transform: uppercase;
+        font-family: "ClearSans-Bold";
+        font-size: 34px; }
+
+@media (max-width: 768px) {
+  main .wrapper .container .layout .layout_img img {
+    width: 100%; }
+  .image-block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .image-block .background-pic {
+      width: 100%;
+      min-height: 500px; }
+    .image-block__text {
+      width: 100%; }
+      .image-block__text .content-wrapper {
+        position: static;
+        -webkit-transform: none;
+                transform: none;
+        width: 90%;
+        margin: 30px auto; } }
+
+@media (max-width: 520px) {
+  main .wrapper .container .layout .page-title {
+    padding: 0; }
+    main .wrapper .container .layout .page-title:after, main .wrapper .container .layout .page-title:before {
+      content: none; }
+  .image-block .background-pic {
+    min-height: 300px; } }
+
 .main-bottom-map-wrapper {
   position: relative; }
   .main-bottom-map-wrapper .main-bottom-map {
@@ -1377,6 +1448,18 @@ main .wrapper .container .layout .page-title h3 {
       width: 100%; }
     .contacts .icon:last-of-type {
       margin-bottom: 0; }
+
+@media (max-width: 768px) {
+  .main-bottom-map-wrapper .main-bottom-map-info-block {
+    top: 0;
+    right: 0;
+    -webkit-transform: none;
+            transform: none; } }
+
+@media (max-width: 520px) {
+  .main-bottom-map-wrapper .main-bottom-map-info-block {
+    position: static;
+    padding: 20px; } }
 
 .banner-container::after {
   display: table;
@@ -1485,6 +1568,23 @@ main .wrapper .container .layout .page-title h3 {
   min-height: 100vh;
   height: 750px; }
 
+@media (max-width: 996px) {
+  .main-map-top-block {
+    display: none; }
+  .banner-container .banner-container-half {
+    width: 100%; }
+  .banner-container .jk-list .jk-list-item .jk-list-item-content {
+    max-width: 500px;
+    width: auto;
+    margin-right: 50px; } }
+
+@media (max-width: 520px) {
+  .banner-container .jk-list .jk-list-item .jk-list-item-content {
+    left: 20px; }
+    .banner-container .jk-list .jk-list-item .jk-list-item-content .jk-list-item-title .jk-list-item-title-flag {
+      position: static;
+      margin: 10px 0; } }
+
 .news-and-sales {
   background-color: white;
   background: linear-gradient(to right, white 0%, white 50%, #0085c8 50%, #0085c8 100%);
@@ -1516,6 +1616,8 @@ main .wrapper .container .layout .page-title h3 {
     padding: 30px 0; }
   .news-and-sales .news-item .image {
     padding-top: 0; }
+    .news-and-sales .news-item .image img {
+      width: 110px; }
   .news-and-sales .news-item .content {
     padding-left: 20px; }
     .news-and-sales .news-item .content a {
@@ -1565,6 +1667,23 @@ main .wrapper .container .layout .page-title h3 {
   .news-and-sales .sales .arrow-next {
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px; }
+
+@media (max-width: 768px) {
+  .news-and-sales {
+    background: none; }
+    .news-and-sales .col-50 {
+      width: 100%; }
+    .news-and-sales .news {
+      background-color: #fff; }
+    .news-and-sales .sales {
+      background-color: #0085c8; } }
+
+@media (max-width: 520px) {
+  .news-and-sales .container {
+    padding-left: 0;
+    padding-right: 0; }
+  .news-and-sales .news-item .image {
+    display: none; } }
 
 main .container .main_content_apartment .img_content_apartment ul li {
   list-style-type: none;
