--- a/app/scss/_homeDomira.scss
+++ b/app/scss/_homeDomira.scss
@@ -108,3 +108,74 @@ main .wrapper .container .layout .page-title h3 {
 .top5-planing {
 	min-height: 100vh;
 }
+
+.image-block {
+	min-height: 100vh;
+	display: flex;
+	.background-pic {
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 50% 50%;
+		width: 40%;
+	}
+	&__text {
+		width: 60%;
+		position: relative;
+		background-color: #3b3f4d;
+		color: #fff;
+		background-image: url('../img/background-image-block.png');
+		background-repeat: no-repeat;
+		background-position: -50% -50%;
+		.content-wrapper {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 60%;
+			font-size: 15px;
+			h2 {
+				text-transform: uppercase;
+				font-family: "ClearSans-Bold";
+				font-size: 34px;
+			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	main .wrapper .container .layout .layout_img {
+		img {
+			width: 100%;
+		}
+	}
+
+	.image-block {
+		flex-wrap: wrap;
+		.background-pic {
+			width: 100%;
+			min-height: 500px;
+		}
+		&__text {
+			width: 100%;
+			.content-wrapper {
+				position: static;
+				transform: none;
+				width: 90%;
+				margin: 30px auto;
+			}
+		}
+	}
+}
+
+@media (max-width: 520px) {
+	main .wrapper .container .layout .page-title {
+		padding: 0;
+		&:after, &:before {
+			content: none;
+		}
+	}
+
+	.image-block .background-pic {
+		min-height: 300px;
+	}
+}
