--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,6 +30,12 @@ body {
    flex-direction: column;
 }
 
+@media (max-width: 996px) {
+  body {
+    padding-top: 87px;
+  }
+}
+
 main {
   width: 100%;
 }
