--- a/app/scss/_map.scss
+++ b/app/scss/_map.scss
@@ -15,6 +15,7 @@
     transform: translateY(-50%);
     font: 700 15px "ClearSans-Regular", sans-serif;
     line-height: 21px;
+    z-index: 1;
     .main-bottom-map-info-block-title h2{
       font-size: 28px;
       font-weight: 700;
@@ -26,15 +27,21 @@
       font-size: 15px;
       font-weight: 400;
     }
-    .main-bottom-map-info-block-content .main-bottom-map-info-block-content-number{
-      font-size: 16px;
-      line-height: 20px;
-      font-weight: 700;
+    .main-bottom-map-info-block-content .main-bottom-map-info-block-content-number {
+      &, & a, a {
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 700;
+        text-decoration: none;
+      }
     }
-    .main-bottom-map-info-block-content .main-bottom-map-info-block-content-email{
-      font-size: 15px;
-      font-weight: 400;
-      line-height: 24px;
+    .main-bottom-map-info-block-content .main-bottom-map-info-block-content-email {
+      &, & a, a {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 24px;
+        text-decoration: none;
+      }
     }
     .main-bottom-map-social-block{
       position: absolute;
@@ -124,7 +131,7 @@
 
 @media (max-width: 520px) {
   .main-bottom-map-wrapper .main-bottom-map-info-block {
-    position: static;
+    position: relative;
     padding: 20px;
   }
 }
