--- a/app/scss/_newsAndSales.scss
+++ b/app/scss/_newsAndSales.scss
@@ -31,12 +31,11 @@
 	}
 	.news-item {
 		.content, .image {
-			padding: 30px 0;
+			padding: 20px 0;
 		}
 		.image {
-			padding-top: 0;
 			img {
-				width: 110px;
+				width: 200px;
 			}
 		}
 		.content {
@@ -81,11 +80,12 @@
 				background-color: darken(#0072b0, 10%);
 			}
 		}
-		h5 {
+		h5 a {
 			color: #f4fbff;
 			font-family: "ClearSans-Bold";
 			font-size: 18px;
 			text-transform: uppercase;
+			text-decoration: none;
 		}
 		.sales-item {
 			margin-top: 30px;
@@ -127,6 +127,7 @@
 		.container {
 			padding-left: 0;
 			padding-right: 0;
+			padding-bottom: 0;
 		}
 		.news-item .image {
 			display: none;
